Maman13/Q2/cpl.output
Grammar

    0 $accept: program $end

    1 program: declarations stmt_block

    2 declarations: declarations declaration
    3             | /* empty */

    4 declaration: idlist ':' type ';'

    5 type: INT
    6     | FLOAT

    7 idlist: idlist ',' ID
    8       | ID

    9 stmt: assignment_stmt
   10     | input_stmt
   11     | output_stmt
   12     | if_stmt
   13     | while_stmt
   14     | switch_stmt
   15     | break_stmt
   16     | stmt_block

   17 assignment_stmt: ID '=' expression ';'

   18 input_stmt: INPUT '(' ID ')' ';'

   19 output_stmt: OUTPUT '(' expression ')' ';'

   20 if_stmt: IF '(' boolexpr ')' stmt ELSE stmt

   21 while_stmt: WHILE '(' boolexpr ')' stmt

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist DEFAULT ':' stmtlist '}'

   23 caselist: caselist CASE NUM ':' stmtlist
   24         | /* empty */

   25 break_stmt: BREAK ';'

   26 stmt_block: '{' stmtlist '}'

   27 stmtlist: stmtlist stmt
   28         | /* empty */

   29 boolexpr: boolexpr OR boolterm
   30         | boolterm

   31 boolterm: boolterm AND boolfactor
   32         | boolfactor

   33 boolfactor: NOT '(' boolexpr ')'
   34           | expression RELOP expression

   35 expression: expression ADDOP term
   36           | term

   37 term: term MULOP factor
   38     | factor

   39 factor: '(' expression ')'
   40       | CAST '(' expression ')'
   41       | ID
   42       | NUM


Terminals, with rules where they appear

$end (0) 0
'(' (40) 18 19 20 21 22 33 39 40
')' (41) 18 19 20 21 22 33 39 40
',' (44) 7
':' (58) 4 22 23
';' (59) 4 17 18 19 25
'=' (61) 17
'{' (123) 22 26
'}' (125) 22 26
error (256)
INT (258) 5
FLOAT (259) 6
ID (260) 7 8 17 18 41
INPUT (261) 18
OUTPUT (262) 19
IF (263) 20
ELSE (264) 20
WHILE (265) 21
SWITCH (266) 22
DEFAULT (267) 22
CASE (268) 23
NUM (269) 23 42
BREAK (270) 25
OR (271) 29
AND (272) 31
NOT (273) 33
RELOP (274) 34
ADDOP (275) 35
MULOP (276) 37
CAST (277) 40


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
program (32)
    on left: 1, on right: 0
declarations (33)
    on left: 2 3, on right: 1 2
declaration (34)
    on left: 4, on right: 2
type (35)
    on left: 5 6, on right: 4
idlist (36)
    on left: 7 8, on right: 4 7
stmt (37)
    on left: 9 10 11 12 13 14 15 16, on right: 20 21 27
assignment_stmt (38)
    on left: 17, on right: 9
input_stmt (39)
    on left: 18, on right: 10
output_stmt (40)
    on left: 19, on right: 11
if_stmt (41)
    on left: 20, on right: 12
while_stmt (42)
    on left: 21, on right: 13
switch_stmt (43)
    on left: 22, on right: 14
caselist (44)
    on left: 23 24, on right: 22 23
break_stmt (45)
    on left: 25, on right: 15
stmt_block (46)
    on left: 26, on right: 1 16
stmtlist (47)
    on left: 27 28, on right: 22 23 26 27
boolexpr (48)
    on left: 29 30, on right: 20 21 29 33
boolterm (49)
    on left: 31 32, on right: 29 30 31
boolfactor (50)
    on left: 33 34, on right: 31 32
expression (51)
    on left: 35 36, on right: 17 19 22 34 35 39 40
term (52)
    on left: 37 38, on right: 35 36 37
factor (53)
    on left: 39 40 41 42, on right: 37 38


state 0

    0 $accept: . program $end

    $default  reduce using rule 3 (declarations)

    program       go to state 1
    declarations  go to state 2


state 1

    0 $accept: program . $end

    $end  shift, and go to state 3


state 2

    1 program: declarations . stmt_block
    2 declarations: declarations . declaration

    ID   shift, and go to state 4
    '{'  shift, and go to state 5

    declaration  go to state 6
    idlist       go to state 7
    stmt_block   go to state 8


state 3

    0 $accept: program $end .

    $default  accept


state 4

    8 idlist: ID .

    $default  reduce using rule 8 (idlist)


state 5

   26 stmt_block: '{' . stmtlist '}'

    $default  reduce using rule 28 (stmtlist)

    stmtlist  go to state 9


state 6

    2 declarations: declarations declaration .

    $default  reduce using rule 2 (declarations)


state 7

    4 declaration: idlist . ':' type ';'
    7 idlist: idlist . ',' ID

    ':'  shift, and go to state 10
    ','  shift, and go to state 11


state 8

    1 program: declarations stmt_block .

    $default  reduce using rule 1 (program)


state 9

   26 stmt_block: '{' stmtlist . '}'
   27 stmtlist: stmtlist . stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5
    '}'     shift, and go to state 19

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


state 10

    4 declaration: idlist ':' . type ';'

    INT    shift, and go to state 29
    FLOAT  shift, and go to state 30

    type  go to state 31


state 11

    7 idlist: idlist ',' . ID

    ID  shift, and go to state 32


state 12

   17 assignment_stmt: ID . '=' expression ';'

    '='  shift, and go to state 33


state 13

   18 input_stmt: INPUT . '(' ID ')' ';'

    '('  shift, and go to state 34


state 14

   19 output_stmt: OUTPUT . '(' expression ')' ';'

    '('  shift, and go to state 35


state 15

   20 if_stmt: IF . '(' boolexpr ')' stmt ELSE stmt

    '('  shift, and go to state 36


state 16

   21 while_stmt: WHILE . '(' boolexpr ')' stmt

    '('  shift, and go to state 37


state 17

   22 switch_stmt: SWITCH . '(' expression ')' '{' caselist DEFAULT ':' stmtlist '}'

    '('  shift, and go to state 38


state 18

   25 break_stmt: BREAK . ';'

    ';'  shift, and go to state 39


state 19

   26 stmt_block: '{' stmtlist '}' .

    $default  reduce using rule 26 (stmt_block)


state 20

   27 stmtlist: stmtlist stmt .

    $default  reduce using rule 27 (stmtlist)


state 21

    9 stmt: assignment_stmt .

    $default  reduce using rule 9 (stmt)


state 22

   10 stmt: input_stmt .

    $default  reduce using rule 10 (stmt)


state 23

   11 stmt: output_stmt .

    $default  reduce using rule 11 (stmt)


state 24

   12 stmt: if_stmt .

    $default  reduce using rule 12 (stmt)


state 25

   13 stmt: while_stmt .

    $default  reduce using rule 13 (stmt)


state 26

   14 stmt: switch_stmt .

    $default  reduce using rule 14 (stmt)


state 27

   15 stmt: break_stmt .

    $default  reduce using rule 15 (stmt)


state 28

   16 stmt: stmt_block .

    $default  reduce using rule 16 (stmt)


state 29

    5 type: INT .

    $default  reduce using rule 5 (type)


state 30

    6 type: FLOAT .

    $default  reduce using rule 6 (type)


state 31

    4 declaration: idlist ':' type . ';'

    ';'  shift, and go to state 40


state 32

    7 idlist: idlist ',' ID .

    $default  reduce using rule 7 (idlist)


state 33

   17 assignment_stmt: ID '=' . expression ';'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 45
    term        go to state 46
    factor      go to state 47


state 34

   18 input_stmt: INPUT '(' . ID ')' ';'

    ID  shift, and go to state 48


state 35

   19 output_stmt: OUTPUT '(' . expression ')' ';'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 49
    term        go to state 46
    factor      go to state 47


state 36

   20 if_stmt: IF '(' . boolexpr ')' stmt ELSE stmt

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 50
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 51
    boolterm    go to state 52
    boolfactor  go to state 53
    expression  go to state 54
    term        go to state 46
    factor      go to state 47


state 37

   21 while_stmt: WHILE '(' . boolexpr ')' stmt

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 50
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 55
    boolterm    go to state 52
    boolfactor  go to state 53
    expression  go to state 54
    term        go to state 46
    factor      go to state 47


state 38

   22 switch_stmt: SWITCH '(' . expression ')' '{' caselist DEFAULT ':' stmtlist '}'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 56
    term        go to state 46
    factor      go to state 47


state 39

   25 break_stmt: BREAK ';' .

    $default  reduce using rule 25 (break_stmt)


state 40

    4 declaration: idlist ':' type ';' .

    $default  reduce using rule 4 (declaration)


state 41

   41 factor: ID .

    $default  reduce using rule 41 (factor)


state 42

   42 factor: NUM .

    $default  reduce using rule 42 (factor)


state 43

   40 factor: CAST . '(' expression ')'

    '('  shift, and go to state 57


state 44

   39 factor: '(' . expression ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 58
    term        go to state 46
    factor      go to state 47


state 45

   17 assignment_stmt: ID '=' expression . ';'
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 59
    ';'    shift, and go to state 60


state 46

   36 expression: term .
   37 term: term . MULOP factor

    MULOP  shift, and go to state 61

    $default  reduce using rule 36 (expression)


state 47

   38 term: factor .

    $default  reduce using rule 38 (term)


state 48

   18 input_stmt: INPUT '(' ID . ')' ';'

    ')'  shift, and go to state 62


state 49

   19 output_stmt: OUTPUT '(' expression . ')' ';'
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 63


state 50

   33 boolfactor: NOT . '(' boolexpr ')'

    '('  shift, and go to state 64


state 51

   20 if_stmt: IF '(' boolexpr . ')' stmt ELSE stmt
   29 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 65
    ')'  shift, and go to state 66


state 52

   30 boolexpr: boolterm .
   31 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 67

    $default  reduce using rule 30 (boolexpr)


state 53

   32 boolterm: boolfactor .

    $default  reduce using rule 32 (boolterm)


state 54

   34 boolfactor: expression . RELOP expression
   35 expression: expression . ADDOP term

    RELOP  shift, and go to state 68
    ADDOP  shift, and go to state 59


state 55

   21 while_stmt: WHILE '(' boolexpr . ')' stmt
   29 boolexpr: boolexpr . OR boolterm

    OR   shift, and go to state 65
    ')'  shift, and go to state 69


state 56

   22 switch_stmt: SWITCH '(' expression . ')' '{' caselist DEFAULT ':' stmtlist '}'
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 70


state 57

   40 factor: CAST '(' . expression ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 71
    term        go to state 46
    factor      go to state 47


state 58

   35 expression: expression . ADDOP term
   39 factor: '(' expression . ')'

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 72


state 59

   35 expression: expression ADDOP . term

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    term    go to state 73
    factor  go to state 47


state 60

   17 assignment_stmt: ID '=' expression ';' .

    $default  reduce using rule 17 (assignment_stmt)


state 61

   37 term: term MULOP . factor

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    factor  go to state 74


state 62

   18 input_stmt: INPUT '(' ID ')' . ';'

    ';'  shift, and go to state 75


state 63

   19 output_stmt: OUTPUT '(' expression ')' . ';'

    ';'  shift, and go to state 76


state 64

   33 boolfactor: NOT '(' . boolexpr ')'

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 50
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolexpr    go to state 77
    boolterm    go to state 52
    boolfactor  go to state 53
    expression  go to state 54
    term        go to state 46
    factor      go to state 47


state 65

   29 boolexpr: boolexpr OR . boolterm

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 50
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolterm    go to state 78
    boolfactor  go to state 53
    expression  go to state 54
    term        go to state 46
    factor      go to state 47


state 66

   20 if_stmt: IF '(' boolexpr ')' . stmt ELSE stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 79
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


state 67

   31 boolterm: boolterm AND . boolfactor

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    NOT   shift, and go to state 50
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    boolfactor  go to state 80
    expression  go to state 54
    term        go to state 46
    factor      go to state 47


state 68

   34 boolfactor: expression RELOP . expression

    ID    shift, and go to state 41
    NUM   shift, and go to state 42
    CAST  shift, and go to state 43
    '('   shift, and go to state 44

    expression  go to state 81
    term        go to state 46
    factor      go to state 47


state 69

   21 while_stmt: WHILE '(' boolexpr ')' . stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 82
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


state 70

   22 switch_stmt: SWITCH '(' expression ')' . '{' caselist DEFAULT ':' stmtlist '}'

    '{'  shift, and go to state 83


state 71

   35 expression: expression . ADDOP term
   40 factor: CAST '(' expression . ')'

    ADDOP  shift, and go to state 59
    ')'    shift, and go to state 84


state 72

   39 factor: '(' expression ')' .

    $default  reduce using rule 39 (factor)


state 73

   35 expression: expression ADDOP term .
   37 term: term . MULOP factor

    MULOP  shift, and go to state 61

    $default  reduce using rule 35 (expression)


state 74

   37 term: term MULOP factor .

    $default  reduce using rule 37 (term)


state 75

   18 input_stmt: INPUT '(' ID ')' ';' .

    $default  reduce using rule 18 (input_stmt)


state 76

   19 output_stmt: OUTPUT '(' expression ')' ';' .

    $default  reduce using rule 19 (output_stmt)


state 77

   29 boolexpr: boolexpr . OR boolterm
   33 boolfactor: NOT '(' boolexpr . ')'

    OR   shift, and go to state 65
    ')'  shift, and go to state 85


state 78

   29 boolexpr: boolexpr OR boolterm .
   31 boolterm: boolterm . AND boolfactor

    AND  shift, and go to state 67

    $default  reduce using rule 29 (boolexpr)


state 79

   20 if_stmt: IF '(' boolexpr ')' stmt . ELSE stmt

    ELSE  shift, and go to state 86


state 80

   31 boolterm: boolterm AND boolfactor .

    $default  reduce using rule 31 (boolterm)


state 81

   34 boolfactor: expression RELOP expression .
   35 expression: expression . ADDOP term

    ADDOP  shift, and go to state 59

    $default  reduce using rule 34 (boolfactor)


state 82

   21 while_stmt: WHILE '(' boolexpr ')' stmt .

    $default  reduce using rule 21 (while_stmt)


state 83

   22 switch_stmt: SWITCH '(' expression ')' '{' . caselist DEFAULT ':' stmtlist '}'

    $default  reduce using rule 24 (caselist)

    caselist  go to state 87


state 84

   40 factor: CAST '(' expression ')' .

    $default  reduce using rule 40 (factor)


state 85

   33 boolfactor: NOT '(' boolexpr ')' .

    $default  reduce using rule 33 (boolfactor)


state 86

   20 if_stmt: IF '(' boolexpr ')' stmt ELSE . stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5

    stmt             go to state 88
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


state 87

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist . DEFAULT ':' stmtlist '}'
   23 caselist: caselist . CASE NUM ':' stmtlist

    DEFAULT  shift, and go to state 89
    CASE     shift, and go to state 90


state 88

   20 if_stmt: IF '(' boolexpr ')' stmt ELSE stmt .

    $default  reduce using rule 20 (if_stmt)


state 89

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist DEFAULT . ':' stmtlist '}'

    ':'  shift, and go to state 91


state 90

   23 caselist: caselist CASE . NUM ':' stmtlist

    NUM  shift, and go to state 92


state 91

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist DEFAULT ':' . stmtlist '}'

    $default  reduce using rule 28 (stmtlist)

    stmtlist  go to state 93


state 92

   23 caselist: caselist CASE NUM . ':' stmtlist

    ':'  shift, and go to state 94


state 93

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist DEFAULT ':' stmtlist . '}'
   27 stmtlist: stmtlist . stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5
    '}'     shift, and go to state 95

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28


state 94

   23 caselist: caselist CASE NUM ':' . stmtlist

    $default  reduce using rule 28 (stmtlist)

    stmtlist  go to state 96


state 95

   22 switch_stmt: SWITCH '(' expression ')' '{' caselist DEFAULT ':' stmtlist '}' .

    $default  reduce using rule 22 (switch_stmt)


state 96

   23 caselist: caselist CASE NUM ':' stmtlist .
   27 stmtlist: stmtlist . stmt

    ID      shift, and go to state 12
    INPUT   shift, and go to state 13
    OUTPUT  shift, and go to state 14
    IF      shift, and go to state 15
    WHILE   shift, and go to state 16
    SWITCH  shift, and go to state 17
    BREAK   shift, and go to state 18
    '{'     shift, and go to state 5

    $default  reduce using rule 23 (caselist)

    stmt             go to state 20
    assignment_stmt  go to state 21
    input_stmt       go to state 22
    output_stmt      go to state 23
    if_stmt          go to state 24
    while_stmt       go to state 25
    switch_stmt      go to state 26
    break_stmt       go to state 27
    stmt_block       go to state 28
